<resources>
    <string name="app_name">ImgurSample</string>
    <string name="loading">Loading..</string>
    <string name="get_images">Get Images</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="app_info">App Info</string>
    <string name="version">Version: 1.0</string>
    <string name="author">Author</string>
    <string name="email_address">Email: fatih.kaplan.mehmet@gmail.com</string>
    <string name="show_viral">Viral On</string>
    <string name="not_viral">Viral Off</string>
    <string name="no_title">No Title Provided</string>
    <string name="no_desc">Description Info Not Provided</string>
    <string name="upvote">Upvote:</string>
    <string name="downvote">Downvote:</string>
    <string name="score">Score:</string>
    <string name="gallery_detail">Gallery Detail</string>
    <string-array name="spinner_array">
        <item>Hot</item>
        <item>Top</item>
        <item>User</item>
    </string-array>
</resources>
